--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
@@ -12,9 +16,6 @@
     "jquery": "^3.3.1",
     "request": "^2.88.0",
     "status-check": "0.0.17"
-  },
-  "scripts": {
-    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
