--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "ejs": "^2.6.1",
+    "ejs-locals": "^1.0.2",
     "express": "^4.16.4",
     "http": "0.0.0",
     "jquery": "^3.3.1",
@@ -18,5 +19,8 @@
     "status-check": "0.0.17"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "mark.js": "^8.11.1"
+  }
 }
