--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "ejs": "^2.6.1",
     "ejs-locals": "^1.0.2",
     "express": "^4.16.4",
+    "get-urls": "^8.0.0",
     "http": "0.0.0",
     "jquery": "^3.3.1",
+    "local-links": "^1.4.1",
+    "node-jsdom": "^3.1.5",
     "request": "^2.88.0",
     "status-check": "0.0.17"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mark.js": "^8.11.1"
+    "mark.js": "^8.11.1",
+    "selenium-webdriver": "^3.6.0"
   }
 }
